--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daksh Shah - Resume</title>
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <section class="me">
         <div class="container">
-            <img src="./assets/images/daksh.jpeg" 
+            <img src="daksh.jpeg" 
             alt="Daksh" class="profile">
             <h1 class="text-uppercase font-weight-bold">Daksh Shah</h1>
             <h5>Data Decoder</h5>
             <div class="actions flex-center">
-                <a href="./assets/resume/DAKSH_RESUME.pdf" class="btn btn-primary mr-1 btn-hover">
+                <a href="DAKSH_RESUME.pdf" class="btn btn-primary mr-1 btn-hover">
                     <ion-icon name="cloud-download" class="mr-50"></ion-icon>
                     <span>Resume</span>
                 </a>
@@ -251,7 +251,7 @@
     </section>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="assets/js/validator.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="validator.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
